@@ -23,6 +23,8 @@
 <?php
 
 require_once(dirname(__FILE__) . '/nls.php');
+require_once(dirname(__FILE__) . '/lib/url.php');
+require_once(dirname(__FILE__) . '/lib/popup.php');
 
 function getRequestVar($str) {
 	if (!is_array($str)) {
@@ -217,70 +219,6 @@ function gallery_syslog($message) {
 		syslog(LOG_NOTICE, "(" . $gallery->app->photoAlbumURL . " [" . $gallery->version . "]) " . $message);
 		closelog();
 	}
-}
-
-function build_popup_url($url, $url_is_complete=0) {
-
-	/* Separate the target from the arguments */
-	$result = explode('?', $url);
-	$target = $result[0];
-	if (isset($result[1])) {
-		$arglist = $result[1];
-	} else {
-		$arglist = "";
-	}
-
-	/* Parse the query string arguments */
-	$args=array();
-	parse_str($arglist, $args);
-	$args['gallery_popup'] = 'true';
-	
-	if (!$url_is_complete) {
-		$url = makeGalleryUrl($target, $args);
-	}
-
-	return $url;
-}
-
-function popup($url, $url_is_complete=0, $height=500,$width=500) {
-        $url = build_popup_url($url, $url_is_complete);
-	return popup_js($url, "Edit", 
-		"height=$height,width=$width,location=no,scrollbars=yes,menubars=no,toolbars=no,resizable=yes");
-}
-
-function popup_js($url, $window, $attrs) {
-	if (ereg("^http|^ftp|&amp;", $url)) {
-		$url = "'$url'";
-	}
-	return "nw=window.open($url,'$window','$attrs'); nw.opener=self; return false;";
-}
-
-function popup_status($url, $height=150, $width=350) {
-	$attrs = "height=$height,width=$width,location=no,scrollbars=no,menubars=no,toolbars=no,resizable=yes";
-	return "open('" . unhtmlentities(makeGalleryUrl($url)) . "','Status','$attrs');";
-}
-
-function popup_link($title, $url, $url_is_complete=0, $online_only=true, $height=500,$width=500, $cssclass='', $extraJS='') {
-    static $popup_counter = 0;
-    global $gallery;
-
-    if ( !empty($gallery->session->offline) && $online_only ) {
-	return null;
-    }
-	$cssclass = empty($cssclass) ? '' : "class=\"$cssclass\"";
-
-    $popup_counter++;
-
-    $link_name = "popuplink_".$popup_counter;
-    $url = build_popup_url($url, $url_is_complete);
-    
-	$a1 = "<a $cssclass style=\"white-space:nowrap;\" id=\"$link_name\" target=\"Edit\" href=\"$url\" onClick=\"javascript:".
-	$extraJS . 
-	popup_js("document.getElementById('$link_name').href", "Edit",
-		 "height=$height,width=$width,location=no,scrollbars=yes,menubars=no,toolbars=no,resizable=yes") .
-	"\">$title</a>";
-
-    return "$a1";
 }
 
 function exec_internal($cmd) {
@@ -1393,168 +1331,6 @@ function correctPseudoUsers(&$array, $ownerUid) {
 	}
 }
 
-/*
- * Any URL that you want to use can either be accessed directly
- * in the case of a standalone Gallery, or indirectly if we're
- * mbedded in another app such as Nuke.  makeGalleryUrl() will 
- * always create the appropriate URL for you.
- *
- * Usage:  makeGalleryUrl(target, args [optional])
- *
- * target is a file with a relative path to the gallery base
- *        (eg, "album_permissions.php")
- *
- * args   are extra key/value pairs used to send data
- *        (eg, array("index" => 1, "set_albumName" => "foo"))
- */
-function makeGalleryUrl($target, $args=array()) {
-
-	global $gallery;
-	global $GALLERY_EMBEDDED_INSIDE;
-	global $GALLERY_EMBEDDED_INSIDE_TYPE;
-	global $GALLERY_MODULENAME;
-
-
-	/* Needed for phpBB2 */
-	global $userdata;
-	global $board_config;
-	
-	/* Needed for Mambo */
-	global $MOS_GALLERY_PARAMS;
-
-	if( isset($GALLERY_EMBEDDED_INSIDE)) {
-                switch ($GALLERY_EMBEDDED_INSIDE_TYPE) {
-	                case 'phpBB2':
-				$cookiename = $board_config['cookie_name'];			
-				if(!isset($_COOKIE[$cookiename . '_sid'])) {
-					// no cookie so we need to pass the session ID manually.
-					$args["sid"] = $userdata['session_id'];
-					if(!isset($args["set_albumName"])) {
-						// This var is only passed some of the time and but is required so PUT IT IN when needed.
-						$args["set_albumName"] = $gallery->session->albumName;
-					}
-				}	
-
-        	        case 'phpnuke':
-                	case 'postnuke':
-			case 'nsnnuke':
-				$args["op"] = "modload";
-				$args["name"] = "$GALLERY_MODULENAME";
-				$args["file"] = "index";
-
-				/*
-				 * include *must* be last so that the JavaScript code in 
-				 * view_album.php can append a filename to the resulting URL.
-				 */
-				$args["include"] = $target;
-				$target = "modules.php";
-
-			break;
-			case 'mambo':
-				$args['option'] = $GALLERY_MODULENAME;
-				$args['Itemid'] = $MOS_GALLERY_PARAMS['itemid'];
-				$args['include'] = $target;
-
-				/* We cant/wantTo load the complete Mambo Environment into the pop up
-				** E.g. the Upload Framwork does not work then
-				** So we need to put necessary infos of Mambo into session.
-				*/
-				if ((isset($args['type']) && $args['type'] == 'popup') ||
-						(!empty($args['gallery_popup']))) {
-					$target= $gallery->app->photoAlbumURL . "/index.php";
-				} else {
-					if (!empty($gallery->session->mambo->mosRoot)) {
-						$target = $gallery->session->mambo->mosRoot . "index.php";
-					} else {
-						$target = 'index.php';
-					}
-				}
-			break;
-
-			// Maybe something went wrong, then we assume we are like standalone.		
-			default:
-				$target = $gallery->app->photoAlbumURL . "/" . $target;
-		}
-	}
-	else {
-		$target = $gallery->app->photoAlbumURL . "/" . $target;
-	}
-
-	$url = $target;
-	if ($args) {
-		$i = 0;
-		foreach ($args as $key => $value) {
-			if ($i++) {
-				$url .= "&";  // should replace with &amp; for validatation
-			} else {
-				$url .= "?";
-			}
-				
-			if (! is_array($value)) {
-				$url .= "$key=$value";
-			} else {
-				$j = 0;
-				foreach ($value as $subkey => $subvalue) {
-					if ($j++) {
-						$url .= "&";  // should replace with &amp; for validatation
-					}
-					$url .= $key .'[' . $subkey . ']=' . $subvalue;
-				}
-			}
-		}
-	}
-	return htmlspecialchars($url);
-}
-
-function makeGalleryHeaderUrl($target, $args=array()) {
-	$url = makeGalleryUrl($target, $args);
-	return unhtmlentities($url);
-}
-
-/*
- * makeAlbumUrl is a wrapper around makeGalleryUrl.  You tell it what
- * album (and optional photo id) and it does the rest.  You can also
- * specify additional key/value pairs in the optional third argument.
- */
-function makeAlbumUrl($albumName="", $photoId="", $args=array()) {
-	global $GALLERY_EMBEDDED_INSIDE, $GALLERY_EMBEDDED_INSIDE_TYPE;
-	global $gallery;
-
-	// We can use GeekLog with rewrite because Gallery is embedded in a different way.
-	if ( $gallery->app->feature["rewrite"] == 1 && 
-		(! $GALLERY_EMBEDDED_INSIDE || $GALLERY_EMBEDDED_INSIDE_TYPE == 'GeekLog')) {
-		if ($albumName) {
-			$target = urlencode ($albumName);
-
-			// Can't have photo without album
-			if ($photoId) {
-				$target .= "/".urlencode ($photoId);
-			} 
-		} else {
-			$target = "albums.php";
-		}
-	} else {
-		if ($albumName) {
-			$args["set_albumName"] = urlencode ($albumName);
-			if ($photoId) {
-				$target = "view_photo.php";
-				$args["id"] = urlencode ($photoId);
-			} else {
-				$target = "view_album.php";
-			}
-		} else {
-			$target = "albums.php";
-		}
-
-	}
-	return makeGalleryUrl($target, $args);
-}
-
-function makeAlbumHeaderUrl($albumName="", $photoId="", $args=array()) {
-	$url = makeAlbumUrl($albumName, $photoId, $args);
-	return unhtmlentities($url);
-}
-
 function gallerySanityCheck() {
 	global $gallery;
 	global $GALLERY_OK;
@@ -1643,14 +1419,6 @@ function isDebugging() {
 		return false;
 	}
 	return !strcmp($gallery->app->debug, "yes");
-}
-
-function addUrlArg($url, $arg) {
-	if (strchr($url, "?")) {
-		return "$url&$arg"; // should replace with &amp; for validatation
-	} else {
-		return "$url?$arg";
-	}
 }
 
 function getNextPhoto($idx, $album=NULL) {
