@@ -1,3 +1,9 @@
+2004-10-03  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b218
+
+	* Change: Put popup related functions into lib/popup.php
+
+	* Change: Put URL related functions into lib/url.php
+
 2004-10-03  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b217
 
 	* Fix: Missed a forgotton Popup.
